# ai-cv-agent

./: .clinerules  .env.example  .gitignore  TODO.md  gen.py  main.py  memory_bank.md  pyproject.toml  run_agent.py  test_agent_analysis.py  tool_tester.py
.github/workflows/: auto-fix.yml  ci.yml  ruff-auto-fix.yml
agent/: cv_agent.py  langchain_cv_agent.py  prompts.py
data/: template_.yaml  user_profile.yaml  user_profile_resume_format.yaml
docs/: WORKFLOW_GUIDE.md  langgraph_workflow_diagram.py  workflow_diagram.mmd  workflow_diagram_complete.mmd
examples/: test_langgraph_workflow.py
src/ai_cv_agent/: __init__.py  main.py
src/ai_cv_agent/agent/: job_parser_agent.py  job_parser_prompts.py  langchain_cv_agent.py  prompts.py  resume_tailoring_agent.py  resume_tailoring_prompts.py
src/ai_cv_agent/graph/: __init__.py  workflow_graph.py
src/ai_cv_agent/models/: __init__.py  job_models.py  resume_models.py
src/ai_cv_agent/tools/: html_cv_builder.py  langchain_tools.py  pdf_exporter.py  resume_parser.py
src/ai_cv_agent/utils/: __init__.py  job_fetcher.py  logging_setup.py  pdf_converter.py  profile_manager.py  resume_mapper.py
templates/: base_template.html  base_template_dynamic.html
templates/styles/: classic-styles.css  default-styles.css  modern-styles.css  reversed-styles.css
tests/: test_agent_analysis.py  test_complete_workflow.py  test_dynamic_styles.py  test_graph_workflow.py
tests/agent/: test_job_parser_integration.py
tests/mocks/: __init__.py  google_swe3_cloud.md
tools/: cv_builder.py  html_cv_builder.py  job_reader.py  langchain_tools.py  pdf_exporter.py  resume_parser.py  user_profile.py
