[project]
name = "ai-cv-agent"
version = "0.1.0"
description = "AI-powered CV generation agent using LangChain and Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "playwright>=1.54.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "trafilatura>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "azure-ai-inference>=1.0.0",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "weasyprint>=60.0",
    "tiktoken>=0.5.0",
]
