[project]
name = "ai-cv-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "playwright>=1.54.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.24.0",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.32",
    "langchain>=0.3.27",
    "crawl4ai>=0.7.4",
    "cssselect>=1.3.0",
    "mdutils>=1.8.0",
]
