[project]
name = "ai-cv-agent"
version = "0.1.0"
description = "AI-powered CV/Resume generation and tailoring system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "playwright>=1.54.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.24.0",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.32",
    "langchain>=0.3.27",
    "crawl4ai>=0.7.4",
    "cssselect>=1.3.0",
    "mdutils>=1.8.0",
]

[project.scripts]
ai-cv-agent = "ai_cv_agent.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_cv_agent", "ai_cv_agent.agent", "ai_cv_agent.tools"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
